@@ -9,4 +9,3 @@ Mmap.xs
 README
 t/mmap.t
 t/munmap_errors.t
-typemap
